testsuite/tests/typecheck/should_fail/tcfail057.stderr

tcfail057.hs:5:7: error:
    • Expected a type, but ‘RealFrac a’ has kind ‘Constraint’
    • In the type signature: f :: (RealFrac a) -> a -> a
